# nanochat

./: .env.example  .gitignore  BUG_REPORT_STRIX_HALO.md  DOCKER_INSTRUCTIONS.md  Dockerfile  NANOBOT.md  README.md  README_VISUAL.md  ToDo.md  infovore_demo.json  pyproject.toml  reproduction_output.txt  run.sh  run1000.sh  run_config.json  speedrun.sh  tinyrun.sh  tunerun.sh  tuning_history.json
configs/: tiny.json  unitok.json
data/test_telemetry_root/base_data/: telemetry_1765491353_0.parquet  telemetry_1765491356_1.parquet  telemetry_1765491356_2.parquet  telemetry_1765491356_3.parquet  telemetry_1765491357_10.parquet  (+7 more)
dev/: verify_workflow_parity.py
nanochat/: common.py  configurator.py  core_eval.py  dataloader.py  diffusion.py  engine.py  gpt.py  infovore.py  lora.py  loss_eval.py  muon.py  polar_express.py  report.py  robotics.py  tokenizer.py  unitok.py  vision.py
nanochat-rs/: Cargo.toml
nanochat-rs/src/: config.rs  diffusion.rs  main.rs  model.rs  tiny_infovore.rs  tiny_math.rs
nanochat/minbpe/: base.py  regex.py
scripts/: base_eval.py  base_loss.py  base_train.py  chat_eval.py  chat_rl.py  chat_sft.py  collect_telemetry.py  ensure_identity_data.py  export_model.py  mid_train.py  plot_tuning.py  prepare_vision_data.py  test_export_flow.py  tok_eval.py  tok_train.py  train_visual_tokenizer.py  tune_system.py  workflow.py
test_export/: model.gguf  model.safetensors
tests/: test_common.py  test_gpt.py  test_lora.py  test_muon_custom.py  test_robotics.py  test_system_tuner.py  test_tokenizer.py  test_train_integration.py  test_workflow.py
(+3 files in other folders)
