[package]
name = "nanochat-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Disable CUDA by default for successful CI/compilation in environments without nvcc.
# For Strix Halo (ROCm), users would typically build with specific flags or features if supported,
# or rely on CPU fallback initially until candle-rocm matures.
candle-core = { version = "0.8.2" }
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
safetensors = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokenizers = "0.20.0"
half = "2.3.1"
